feat: Update viewContent analytics measuring point - MEED-8098 - Meeds-io/MIPs#162 (#395)
Update viewContent analytics measuring point